[gd_scene load_steps=11 format=3 uid="uid://npe82cly528i"]

[ext_resource type="Script" path="res://scripts/wizard.gd" id="1_n2dau"]
[ext_resource type="Texture2D" uid="uid://b0lgpr2qnw0g6" path="res://images/netopyr.png" id="2_hr3mr"]
[ext_resource type="PackedScene" uid="uid://cbfwrf4gw30sa" path="res://scenes/killzone.tscn" id="2_qcxvb"]
[ext_resource type="AudioStream" uid="uid://cf0kh68ridyho" path="res://Sounds/netopyr.mp3" id="4_lxkx6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbaqv"]
atlas = ExtResource("2_hr3mr")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs44h"]
atlas = ExtResource("2_hr3mr")
region = Rect2(70, 0, 70, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_elhtq"]
animations = [{
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_hbaqv")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_fs44h")
}],
"loop": true,
"name": &"wizard",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74w14"]
size = Vector2(25, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_bsiwv"]
radius = 146.031

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twk8s"]
size = Vector2(29, 20)

[node name="Netopyr" type="Node2D"]
z_index = 1
script = ExtResource("1_n2dau")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(6, -2)
scale = Vector2(1.75513, 1.75513)
sprite_frames = SubResource("SpriteFrames_elhtq")
animation = &"wizard"
autoplay = "wizard"
frame_progress = 0.303861

[node name="killzone" parent="." instance=ExtResource("2_qcxvb")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_74w14")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-4, -6)
shape = SubResource("CircleShape2D_bsiwv")
debug_color = Color(0, 0.6, 0.701961, 0.368627)

[node name="BulletCatcher" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCatcher"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_twk8s")

[node name="zvuknetopyr" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lxkx6")
volume_db = -40.0
autoplay = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="BulletCatcher" to="." method="_on_bullet_catcher_area_entered"]
[connection signal="finished" from="zvuknetopyr" to="." method="_on_zvuknetopyr_finished"]
